Update link home pada logo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!--HEADER-->
         <header>
             <div class="header-left">
-                <a href="/day11/index.html" class="logo">
+                <a href="index.html" class="logo">
                   <img src="logo-yoga-oscar-web-23.png" alt="logo">
                 </a>
               </div>
